fixed spacing issue on the headding

--- a/ToDoList/ToDoList.css
+++ b/ToDoList/ToDoList.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Monteserrat:400,600');
 
-header {
+body {
     margin: 0;
     font-family: 'Montserrat', sans-serif;
 }
